intel/bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main/log.txt
bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main.c:52:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpFx;
                ^
                      = nullptr
bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main.c:53:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpObjSEndTerm;
                ^
                               = nullptr
bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main.c:54:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpQN1;
                ^
                       = nullptr
bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main.c:55:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpQN2;
                ^
                       = nullptr
4 errors generated.
HLS FPGA Parse FAILED.
